added some styling

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,9 @@
     </head>
     <body>
         <main id="container"></main>
+        <footer>
+            <a href="https://www.vecteezy.com/free-vector/web">Web Vectors by Vecteezy</a>
+        </footer>
         <script type="module" src="./scripts/main.js"></script>
     </body>
 </html>
